Add server files

--- a/public/index.html
+++ b/public/index.html
@@ -1296,7 +1296,7 @@ else if (cmd.type === 'move') {
                 });
             }
         }
-        else if (cmd.type === 'path_move') {
+else if (cmd.type === 'path_move') {
             if (cmd.data) {
                 cmd.data.forEach(item => {
                     const u = this.units.find(unit => unit.id === item.id);
@@ -1305,21 +1305,26 @@ else if (cmd.type === 'move') {
                     }
                 });
             }
-        }
-        else if (cmd.type === 'arty_shot') {
-            const shooter = this.units.find(u => u.id === cmd.id);
-            if (shooter) shooter.fireArty(cmd.tx, cmd.ty, true);
-        }
-            else if (cmd.type === 'help_build') {
+        } // <--- Эта скобка закрывает 'path_move'
+        else if (cmd.type === 'help_build') { // <--- Сразу начинается следующий блок
             const builder = this.units.find(u => u.id === cmd.builderId);
             const site = this.constructions.find(s => s.id === cmd.siteId);
             
-            // Если нашли и строителя, и стройплощадку — соединяем их
             if (builder && site) {
                 builder.assignSite(site);
                 builder.moveTo(site.x, site.y);
                 Game.effects.push({x: site.x, y: site.y, char: '🔧', life: 20});
             }
+        }
+        else if (cmd.type === 'build_start') {
+            const site = { id: cmd.id, type: cmd.bType, x: cmd.x, y: cmd.y, total: UNITS[cmd.bType].constructTime * 60, remaining: UNITS[cmd.bType].constructTime * 60, owner: cmd.side };
+            this.constructions.push(site);
+            const builder = this.units.find(u => u.side === cmd.side && u.isBuilder);
+            if (builder) builder.assignSite(site);
+        }
+        else if (cmd.type === 'arty_shot') {
+            const shooter = this.units.find(u => u.id === cmd.id);
+            if (shooter) shooter.fireArty(cmd.tx, cmd.ty, true);
         }
         else if (cmd.type === 'sync_units') {
             if (cmd.side !== this.myRole) { 
@@ -1332,7 +1337,7 @@ else if (cmd.type === 'move') {
                 });
             }
         }
-    },
+    }, // Закрывающая скобка метода executeCommand
 
     update() {
         if (this.clickDelay > 0) this.clickDelay--;
