--- a/public/index.html
+++ b/public/index.html
@@ -160,7 +160,7 @@
     
     <div id="right-controls" class="clickable">
         <button id="reload-btn" class="action-circle-btn" onclick="Game.reloadGrads()">
-             <span♻️</span><br>ПЕРЕЗАРЯД<br><span style="color:#ff0">1000$</span>
+             <span></span>♻️</span><br>ПЕРЕЗАРЯД<br><span style="color:#ff0">1000$</span>
         </button>
         <button id="arty-btn" class="action-circle-btn" onclick="Game.toggleArty()">
             <span>🚀 ЗАЛП</span>
