--- a/public/index.html
+++ b/public/index.html
@@ -886,29 +886,60 @@ class BotAI {
         return false;
     }
 
-    manageIndustry() {
+manageIndustry() {
         const factories = Game.units.filter(u => u.side === this.side && u.type === 'FACTORY' && u.spawnCooldown <= 0 && u.isPowered);
         const army = Game.units.filter(u => u.side === this.side && !u.isBuilder && !u.isProducer);
+        
         const tanks = army.filter(u => u.type === 'TANK').length;
         const helis = army.filter(u => u.type === 'HELICOPTER').length;
         const grads = army.filter(u => u.type === 'GRAD').length;
 
         factories.forEach(f => {
-            if (this.resources.iron < 150 && this.money >= UNITS.CRAFT_IRON.cost) { this.craft(f, 'CRAFT_IRON'); return; }
-            if (this.resources.chem < 100 && this.resources.iron >= 10) { this.craft(f, 'CRAFT_CHEM'); return; }
-            if (this.resources.chips < 50 && this.resources.iron >= 15) { this.craft(f, 'CRAFT_CHIP'); return; }
+            // 1. ОПРЕДЕЛЯЕМ, ЧТО ХОТИМ ПОСТРОИТЬ (Баланс армии)
+            let wantUnit = 'TANK'; // По умолчанию танк
+            
+            // Если танков уже 3+, пробуем добавить воздух
+            if (tanks > 3 && helis < tanks / 3) wantUnit = 'HELICOPTER';
+            // Если танков 4+, добавляем артиллерию
+            else if (tanks > 4 && grads < tanks / 4) wantUnit = 'GRAD';
 
-            if (helis < tanks / 3 + 1) {
-                if (this.money >= UNITS.HELICOPTER.cost) {
-                    if (this.checkRes(UNITS.HELICOPTER)) { this.payRes(UNITS.HELICOPTER); this.craft(f, 'HELICOPTER'); } 
-                    else { if (this.resources.chips < 20) this.craft(f, 'CRAFT_CHIP'); else if (this.resources.chem < 50) this.craft(f, 'CRAFT_CHEM'); }
-                    return; 
+            const uInfo = UNITS[wantUnit];
+
+            // 2. ПРОВЕРЯЕМ: МОЖЕМ ЛИ ПОСТРОИТЬ ПРЯМО СЕЙЧАС?
+            if (this.money >= uInfo.cost && this.checkRes(uInfo)) {
+                this.payRes(uInfo);
+                this.craft(f, wantUnit);
+                return; // Успех, завод занят
+            }
+
+            // 3. ЕСЛИ НЕ МОЖЕМ - СМОТРИМ, ЧЕГО НЕ ХВАТАЕТ И КРАФТИМ ЭТО
+            const resNeeded = uInfo.resCost || {};
+
+            // А) Не хватает микросхем?
+            if ((resNeeded.chips || 0) > this.resources.chips) {
+                // Чтобы сделать чип, нужно 15 жел и 15 хим. Проверяем, есть ли ингредиенты
+                if (this.resources.iron >= 15 && this.resources.chem >= 15) {
+                    if (this.money >= UNITS.CRAFT_CHIP.cost) { this.craft(f, 'CRAFT_CHIP'); return; }
+                }
+                // Если на чип не хватает химии -> приоритет химии
+                if (this.resources.chem < 15) {
+                     if (this.resources.iron >= 10) { this.craft(f, 'CRAFT_CHEM'); return; }
                 }
             }
-            if (grads < tanks / 4 + 1) {
-                if (this.money >= UNITS.GRAD.cost && this.checkRes(UNITS.GRAD)) { this.payRes(UNITS.GRAD); this.craft(f, 'GRAD'); return; }
+
+            // Б) Не хватает химии?
+            if ((resNeeded.chem || 0) > this.resources.chem) {
+                if (this.resources.iron >= 10 && this.money >= UNITS.CRAFT_CHEM.cost) {
+                    this.craft(f, 'CRAFT_CHEM'); return;
+                }
             }
-            if (this.checkRes(UNITS.TANK) && this.money >= UNITS.TANK.cost) { this.payRes(UNITS.TANK); this.craft(f, 'TANK'); }
+
+            // В) Не хватает железа или просто копим базу?
+            // Крафтим железо, если его мало ИЛИ если денег много (чтобы не простаивать)
+            if (this.resources.iron < 50 || (this.money > 1000 && this.resources.iron < 300)) {
+                this.craft(f, 'CRAFT_IRON');
+                return;
+            }
         });
     }
 
